# scaffolder

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml  lefthook.yml
.github/workflows/: ci.yml  release.yml
examples/rust-starter/: .scaffoldignore.jinja  scaffold.toml
examples/rust-starter/files/: .editorconfig.jinja  .gitignore.jinja  Cargo.toml.jinja  Dockerfile.jinja  README.md.jinja
examples/rust-starter/files/.github/workflows/: ci.yml
examples/rust-starter/files/scripts/: executable_build.sh.jinja
examples/rust-starter/partials/: gitignore-docker
src/: lib.rs  main.rs
src/app/: hooks.rs  mod.rs  pipeline.rs  report.rs  validate.rs
src/cli/: command.rs  confirm.rs  mod.rs  prompt.rs
src/cli/commands/: apply.rs  mod.rs
src/cli/commands/template/: list.rs  mod.rs  new.rs  validate.rs
src/domain/: answer.rs  data.rs  hook.rs  ignore.rs  manifest.rs  mod.rs  name.rs  place.rs  question.rs  render.rs  skeleton.rs  store.rs
src/infra/: hook.rs  mod.rs  place.rs  scaffold.rs
src/infra/load/: answers.rs  data.rs  ignore.rs  manifest.rs  mod.rs  partials.rs  source_root.rs  store.rs  test_support.rs  trust.rs
src/infra/load/store/: tests.rs
src/infra/render/: expr.rs  filters.rs  mod.rs  render.rs
tests/: apply.rs  example_rust_starter.rs  skeleton.rs  template.rs
tests/common/: mod.rs
