[package]
name = "scaffolder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
dirs = "6.0.0"
heck = "0.5.0"
ignore = "0.4.30"
inquire = "0.9.4"
minijinja = "2.21.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
